--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
 
-        <img src="assets/img/ambilabfondo.jpeg" alt data-aos="fade-in">
+          <img src="assets/img/ambilabfondo.jpeg" alt data-aos="fade-in" loading="lazy" width="600" height="400">
 
         <div class="container d-flex flex-column align-items-center">
           <h2 id="titulo-principal" data-aos="fade-up"
@@ -144,7 +144,7 @@ const slogans = [
                 integrales</h3>
               <img src="assets/img/laboratorio_analisis.jpg"
                 class="img-fluid rounded-4 mb-4"
-                alt="Ambiental Laboratorios - Análisis Ambiental">
+                alt="Ambiental Laboratorios - Análisis Ambiental" loading="lazy" width="600" height="400">
               <p>En Ambiental Laboratorios S.A.C. nos especializamos en el
                 monitoreo, análisis y estudios ambientales, brindando servicios
                 que garantizan la calidad del agua, suelo, aire y ruido.</p>
@@ -178,9 +178,9 @@ const slogans = [
                 </p>
 
                 <div class="position-relative mt-4">
-                  <img src="assets/img/equipo_campo.jpg"
+                <img src="assets/img/equipo_campo.jpg"
                     class="img-fluid rounded-4"
-                    alt="Ambiental Laboratorios - Equipo en campo">
+                    alt="Ambiental Laboratorios - Equipo en campo" loading="lazy" width="600" height="400">
                 </div>
               </div>
             </div>
@@ -244,8 +244,8 @@ const slogans = [
               data-aos-delay="200">
               <div class="service-item">
                 <div class="img">
-                  <img src="assets/img/analisis_agua_suelo.jpg"
-                    class="img-fluid" alt="Análisis de Agua y Suelo">
+              <img src="assets/img/analisis_agua_suelo.jpg"
+                    class="img-fluid" alt="Análisis de Agua y Suelo" loading="lazy" width="600" height="400">
                 </div>
                 <div class="details position-relative">
                   <div class="icon">
@@ -264,8 +264,8 @@ const slogans = [
               data-aos-delay="300">
               <div class="service-item">
                 <div class="img">
-                  <img src="assets/img/monitoreo_aire_ruido.jpg"
-                    class="img-fluid" alt="Monitoreo de Aire y Ruido">
+                <img src="assets/img/monitoreo_aire_ruido.jpg"
+                    class="img-fluid" alt="Monitoreo de Aire y Ruido" loading="lazy" width="600" height="400">
                 </div>
                 <div class="details position-relative">
                   <div class="icon">
@@ -283,8 +283,8 @@ const slogans = [
               data-aos-delay="400">
               <div class="service-item">
                 <div class="img">
-                  <img src="assets/img/estudios_ambientales.jpg"
-                    class="img-fluid" alt="Estudios de Impacto Ambiental">
+                <img src="assets/img/estudios_ambientales.jpg"
+                    class="img-fluid" alt="Estudios de Impacto Ambiental" loading="lazy" width="600" height="400">
                 </div>
                 <div class="details position-relative">
                   <div class="icon">
@@ -303,7 +303,7 @@ const slogans = [
               <div class="service-item">
                 <div class="img">
                   <img src="assets/img/pruebas_laboratorio.jpg"
-                    class="img-fluid" alt="Pruebas de Laboratorio Acreditadas">
+                    class="img-fluid" alt="Pruebas de Laboratorio Acreditadas" loading="lazy" width="600" height="400">
                 </div>
                 <div class="details position-relative">
                   <div class="icon">
@@ -323,7 +323,7 @@ const slogans = [
               <div class="service-item">
                 <div class="img">
                   <img src="assets/img/capacitaciones_tecnicas.jpg"
-                    class="img-fluid" alt="Capacitaciones Técnicas Ambientales">
+                    class="img-fluid" alt="Capacitaciones Técnicas Ambientales" loading="lazy" width="600" height="400">
                 </div>
                 <div class="details position-relative">
                   <div class="icon">
@@ -342,7 +342,7 @@ const slogans = [
               <div class="service-item">
                 <div class="img">
                   <img src="assets/img/asesoria_normativa.jpg" class="img-fluid"
-                    alt="Asesoría en Normativa Ambiental">
+                    alt="Asesoría en Normativa Ambiental" loading="lazy" width="600" height="400">
                 </div>
                 <div class="details position-relative">
                   <div class="icon">
@@ -371,29 +371,29 @@ const slogans = [
           <div class="row gy-4">
 
             <div class="col-xl-2 col-md-3 col-6 client-logo">
-              <img src="assets/img/clients/cerroverde.png" class="img-fluid" alt>
+              <img src="assets/img/clients/cerroverde.png" class="img-fluid" alt loading="lazy" width="200" height="100">
             </div><!-- End Client Item -->
 
             <div class="col-xl-2 col-md-3 col-6 client-logo">
               <img src="assets/img/clients/munihyo.png"
-                class="img-fluid" alt>
+                class="img-fluid" alt loading="lazy" width="200" height="100">
             </div><!-- End Client Item -->
 
             <div class="col-xl-2 col-md-3 col-6 client-logo">
               <img src="assets/img/clients/munitambo.png" class="img-fluid"
-                alt>
+                alt loading="lazy" width="200" height="100">
             </div><!-- End Client Item -->
 
             <div class="col-xl-2 col-md-3 col-6 client-logo">
-              <img src="assets/img/clients/hlc.svg" class="img-fluid" alt>
+              <img src="assets/img/clients/hlc.svg" class="img-fluid" alt loading="lazy" width="200" height="100">
             </div><!-- End Client Item -->
 
             <div class="col-xl-2 col-md-3 col-6 client-logo">
-              <img src="assets/img/clients/conti.png" class="img-fluid" alt>
+              <img src="assets/img/clients/conti.png" class="img-fluid" alt loading="lazy" width="200" height="100">
             </div><!-- End Client Item -->
 
             <div class="col-xl-2 col-md-3 col-6 client-logo">
-              <img src="assets/img/clients/uncp.png" class="img-fluid" alt>
+              <img src="assets/img/clients/uncp.png" class="img-fluid" alt loading="lazy" width="200" height="100">
             </div><!-- End Client Item -->
 
           </div>
@@ -469,7 +469,7 @@ const slogans = [
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
                   <img src="assets/img/calidad_certificada.jpg"
-                    alt="Laboratorio con certificaciones ISO" class="img-fluid">
+                    alt="Laboratorio con certificaciones ISO" class="img-fluid" loading="lazy" width="600" height="400">
                 </div>
               </div>
             </div><div class="tab-pane fade" id="features-tab-2">
@@ -503,7 +503,7 @@ const slogans = [
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
                   <img src="assets/img/mapa_peru_alcance.jpg"
                     alt="Mapa de Perú con alcance de servicios"
-                    class="img-fluid">
+                    class="img-fluid" loading="lazy" width="600" height="400">
                 </div>
               </div>
             </div><div class="tab-pane fade" id="features-tab-3">
@@ -537,7 +537,7 @@ const slogans = [
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
                   <img src="assets/img/equipo_tecnologia.jpg"
                     alt="Científicos trabajando en laboratorio"
-                    class="img-fluid">
+                    class="img-fluid" loading="lazy" width="600" height="400">
                 </div>
               </div>
             </div><div class="tab-pane fade" id="features-tab-4">
@@ -570,7 +570,7 @@ const slogans = [
                 <div class="col-lg-6 order-1 order-lg-2 text-center">
                   <img src="assets/img/sostenibilidad_comunidad.jpg"
                     alt="Manos sosteniendo una planta o el planeta"
-                    class="img-fluid">
+                    class="img-fluid" loading="lazy" width="600" height="400">
                 </div>
               </div>
             </div></div>
@@ -686,7 +686,7 @@ const slogans = [
                 <div class="testimonial-item">
                   <img
                     src="assets/img/testimonials/testimonial-empresa-minera.jpg"
-                    class="testimonial-img" alt="Testimonio de cliente minero">
+                    class="testimonial-img" alt="Testimonio de cliente minero" loading="lazy" width="300" height="300">
                   <h3>Gerente de Operaciones</h3>
                   <h4>Empresa Minera del Centro</h4>
                   <div class="stars">
@@ -711,7 +711,7 @@ const slogans = [
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonial-agricola.jpg"
                     class="testimonial-img"
-                    alt="Testimonio de cliente agrícola">
+                    alt="Testimonio de cliente agrícola" loading="lazy" width="300" height="300">
                   <h3>Director de Producción</h3>
                   <h4>Cooperativa Agrícola "Verde Valle"</h4>
                   <div class="stars">
@@ -735,7 +735,7 @@ const slogans = [
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonial-universidad.jpg"
                     class="testimonial-img"
-                    alt="Testimonio de aliado académico">
+                    alt="Testimonio de aliado académico" loading="lazy" width="300" height="300">
                   <h3>Jefe de Departamento Ambiental</h3>
                   <h4>Universidad Nacional del Centro del Perú</h4>
                   <div class="stars">
@@ -787,8 +787,8 @@ const slogans = [
               <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agua filter-mineria">
                 <div class="portfolio-content h-100">
-                  <img src="assets/img/portfolio/proyecto-mineria-agua.jpg"
-                    class="img-fluid" alt="Monitoreo de agua en mina">
+                <img src="assets/img/portfolio/proyecto-mineria-agua.jpg"
+                    class="img-fluid" alt="Monitoreo de agua en mina" loading="lazy" width="600" height="400">
                   <div class="portfolio-info">
                     <h4>Monitoreo de Calidad de Agua</h4>
                     <p>Proyecto para empresa minera en Ancash: control de
@@ -806,7 +806,7 @@ const slogans = [
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-estudios filter-agricultura">
                 <div class="portfolio-content h-100">
                   <img src="assets/img/portfolio/proyecto-agricultura-eia.jpg"
-                    class="img-fluid" alt="Estudio de impacto agrícola">
+                    class="img-fluid" alt="Estudio de impacto agrícola" loading="lazy" width="600" height="400">
                   <div class="portfolio-info">
                     <h4>Estudio de Impacto Ambiental (EIA)</h4>
                     <p>Evaluación ambiental para expansión de cultivo orgánico
@@ -824,7 +824,7 @@ const slogans = [
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-aire filter-saneamiento">
                 <div class="portfolio-content h-100">
                   <img src="assets/img/portfolio/proyecto-ruido-urbano.jpg"
-                    class="img-fluid" alt="Medición de ruido en ciudad">
+                    class="img-fluid" alt="Medición de ruido en ciudad" loading="lazy" width="600" height="400">
                   <div class="portfolio-info">
                     <h4>Monitoreo de Ruido Ambiental</h4>
                     <p>Evaluación acústica en distrito de Huancayo para plan de
@@ -842,7 +842,7 @@ const slogans = [
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agua filter-mineria">
                 <div class="portfolio-content h-100">
                   <img src="assets/img/portfolio/proyecto-suelo-contaminado.jpg"
-                    class="img-fluid" alt="Análisis de suelo en campo">
+                    class="img-fluid" alt="Análisis de suelo en campo" loading="lazy" width="600" height="400">
                   <div class="portfolio-info">
                     <h4>Análisis de Suelo para Remediación</h4>
                     <p>Caracterización de suelos impactados por actividad minera
@@ -861,7 +861,7 @@ const slogans = [
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-estudios filter-saneamiento">
                 <div class="portfolio-content h-100">
                   <img src="assets/img/portfolio/proyecto-capacitacion.jpg"
-                    class="img-fluid" alt="Capacitación en gestión de residuos">
+                    class="img-fluid" alt="Capacitación en gestión de residuos" loading="lazy" width="600" height="400">
                   <div class="portfolio-info">
                     <h4>Capacitación en Gestión de Residuos</h4>
                     <p>Formación para personal de planta industrial en Lima
@@ -881,7 +881,7 @@ const slogans = [
                   <img
                     src="assets/img/portfolio/proyecto-saneamiento-pruebas.jpg"
                     class="img-fluid"
-                    alt="Pruebas de laboratorio para agua potable">
+                    alt="Pruebas de laboratorio para agua potable" loading="lazy" width="600" height="400">
                   <div class="portfolio-info">
                     <h4>Pruebas de Calidad para Agua Potable</h4>
                     <p>Análisis de cumplimiento para empresa de saneamiento en
